--- a/spysatellite/templates/twitter.html
+++ b/spysatellite/templates/twitter.html
@@ -18,7 +18,7 @@
     <h4>So what is this?</h4>
     <p>
     SpySatellite is a service for converting Twitter streams into Atom feeds. Supports user tweets, tweets for a certain hashtag, as well as search results.<br />
-    It is written in Python, using Flask and Beautiful Soup. The code is open-source and <a href="whoops">available on GitHub</a>.
+    It is written in Python, using Flask and Beautiful Soup. The code is open-source and <a href="https://github.com/micha030201/spysatellite/">available on GitHub</a>.
     </p>
   </div>
   <div>
@@ -53,7 +53,7 @@
     <p>
       If you're getting empty search feeds, it means that Twitter did not find anything for your input. Try searching for something else.<br />
       Error 500 is most likely the result of Twitter putting something weird in the Tweet markup. They really like doing that. The piece of offending HTML has been logged, and the best thing you can do is wait until I look at the log and add yet another edge case. Or, less likely, it might mean that Twitter is down.
-      If something in the feed itself is broken, please <a href="whoops">report the issue on GitHub</a>. 
+      If something in the feed itself is broken, please <a href="https://github.com/micha030201/spysatellite/">report the issue on GitHub</a>. 
     </p>
   </div>
 </section>
