--- a/spysatellite/templates/twitter.html
+++ b/spysatellite/templates/twitter.html
@@ -52,8 +52,8 @@
     <h4>Something doesn't work!</h4>
     <p>
       If you're getting empty search feeds, it means that Twitter did not find anything for your input. Try searching for something else.<br />
-      Error 500 is most likely the result of Twitter putting something weird in the Tweet markup. They really like doing that. The piece of offending HTML has been logged, and the best thing you can do is wait until I look at the log and add yet another edge case. Or, less likely, it might mean that Twitter is down.
-      If something in the feed itself is broken, please <a href="https://github.com/micha030201/spysatellite/">report the issue on GitHub</a>. 
+      Error 500 is most likely the result of Twitter putting something weird in the Tweet markup. They really like doing that. The piece of offending HTML has been logged, and the best thing you can do is wait until I look at the log and add yet another edge case. Or, less likely, it might mean that Twitter is down.<br/>
+      If something in the feed itself is broken, please <a href="https://github.com/micha030201/spysatellite/issues/">report the issue on GitHub</a>. 
     </p>
   </div>
 </section>
