--- a/spysatellite/templates/base.html
+++ b/spysatellite/templates/base.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--<meta name="description" content="">-->
+  <meta name="description" content="Output Twitter streams as Atom feeds.">
   <meta name="keywords" content="rss, atom, feed, twitter">
 
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
@@ -16,7 +16,7 @@
     </div>
     {% block body %}{% endblock %}
     <footer>
-      <b>Background image by ROSCOSMOS.</p>
+      <b>Background image by ROSCOSMOS.</b>
     </footer>
   </body>
 </html>
