--- a/spysatellite/templates/twitter.html
+++ b/spysatellite/templates/twitter.html
@@ -14,47 +14,48 @@
   </form>
 </section>
 <section>
-  <div>
-    <h4>So what is this?</h4>
-    <p>
-    SpySatellite is a service for converting Twitter streams into Atom feeds. Supports user tweets, tweets for a certain hashtag, as well as search results.<br />
-    It is written in Python, using Flask and Beautiful Soup. The code is open-source and <a href="https://github.com/micha030201/spysatellite/">available on GitHub</a>.
-    </p>
-  </div>
-  <div>
-    <h4>Doesn't this sort of thing already exist?</h4>
-    <p>
-    You are right, there already are several services doing this. Unfortunately, none of them work particularly well. I had the most luck with <a href="https://twitrss.me/">TwitRSS.me</a>, but even it can't correctly handle a lot of stuff, uncluding quotes, multiple images, and line breaks.<br />
-    SpySatellite can.
-    </p>
-  </div>
-  <div>
-    <h4>Alright so what <i>can't</i> it do then?</h4>
-    <p>
-      SpySatellite doesn't do replies correctly: only the reply is shown, not the full chain of tweets. So you know this is a reply, but don't know to what exactly. Hence why they are disabled in feeds by default. In my defence, this is exactly the way it's done on the Twitter website.<br />
-      Twitter media, in the form of videos and fat JavaScript frames Twitter calls "gifs" for some bizzare reason, are also not shown. Instead, they're replaced with an explanatory note and a random cat gif. Actual gif, yes. Hope you enjoy.
-    </p>
-  </div>
-  <div>
-    <h4>Can I still enable replies?</h4>
-    <p>
-      Yes you can, add <kbd>/with_replies</kbd> at the end of the feed url.
-    </p>
-  </div>
-  <div>
-    <h4>What are the limits?</h4>
-    <p>
-      Feeds are cached for 17 minutes, as of right now. Rate limit is 6 requests per minute, after the burst of 50 requests. Should be enough.<br />
-      May be changed in the future.
-    </p>
-  </div>
-  <div>
-    <h4>Something doesn't work!</h4>
-    <p>
-      If you're getting empty search feeds, it means that Twitter did not find anything for your input. Try searching for something else.<br />
-      Error 500 is most likely the result of Twitter putting something weird in the Tweet markup. They really like doing that. The piece of offending HTML has been logged, and the best thing you can do is wait until I look at the log and add yet another edge case. Or, less likely, it might mean that Twitter is down.<br/>
-      If something in the feed itself is broken, please <a href="https://github.com/micha030201/spysatellite/issues/">report the issue on GitHub</a>. 
-    </p>
-  </div>
+  <ul>
+    <li>
+      <h4>So what is this?</h4>
+      <p>
+        SpySatellite is a service for converting Twitter streams into Atom feeds. Supports user tweets, tweets for a certain hashtag, as well as search results.<br />
+        It is written in Python, using Flask and Beautiful Soup. The code is open-source and <a href="https://github.com/micha030201/spysatellite/">available on GitHub</a>.
+      </p>
+    </li>
+    <li>
+      <h4>Doesn't this sort of thing already exist?</h4>
+      <p>
+        You are right, there already are several services doing this. Unfortunately, none of them work particularly well. I had the most luck with <a href="https://twitrss.me/">TwitRSS.me</a>, but it can't correctly handle a lot of stuff, uncluding quotes, multiple images, and line breaks. They motivate this behaviour by the intention to keep compatible with the v1 API, which would probably make some sort of sense to me had I arrived to the Twitter to RSS scene a few years ago, but alas.
+      </p>
+    </li>
+    <li>
+      <h4>Is there anything that your service can't do?</h4>
+      <p>
+        SpySatellite doesn't do replies correctly: only the reply is shown, not the full chain of tweets. So you know this is a reply, but don't know to what exactly. Hence why they are disabled in feeds by default. In my defence, this is exactly the way it's done on the Twitter website.<br />
+        Twitter media, in the form of videos and fat JavaScript frames Twitter calls "gifs" for some bizzare reason, are also not shown. Instead, they're replaced with an explanatory note and a random cat gif. Actual gif, yes. Hope you enjoy.
+      </p>
+    </li>
+    <li>
+      <h4>Can I still enable replies?</h4>
+      <p>
+        Yes you can, add <kbd>/with_replies</kbd> at the end of the feed url.
+      </p>
+    </li>
+    <li>
+      <h4>What are the limits?</h4>
+      <p>
+        Feeds are cached for 17 minutes, as of right now. Rate limit is 6 requests per minute, after the burst of 50 requests. Should be more than enough for now.<br />
+        May be changed later, obviously.
+      </p>
+    </li>
+    <li>
+      <h4>Something isn't working!</h4>
+      <p>
+        If you're getting empty search feeds, it means that Twitter did not find anything for your input. Try searching for something else.<br />
+        Error 500 is most likely the result of Twitter putting something weird in the Tweet markup. They really like doing that. The piece of offending HTML has been logged, and the best thing you can do is wait until I look at the log and add yet another edge case. Or it might also mean that Twitter is down.<br/>
+        If something in the feed itself is broken, please <a href="https://github.com/micha030201/spysatellite/issues/">report the issue on GitHub</a>. 
+      </p>
+    </li>
+  </ul>
 </section>
 {% endblock %}
